Fix leaflet map overlaping some elements. Fix default form input option for event type not working correctly.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,9 @@
   list-style-type: circle;
 }
 
+
 .leaflet-container {
+  z-index: 0;
   height: 75vh;
   width: 100%;
 }
@@ -51,19 +53,26 @@ html, body {
   font-size: small;
 }
 
-/* react-transition-group */
 
+
+/* react-transition-group */
 
 .fade-enter{
   opacity: 0;
+  /* transform: translate3d(-100%, 0, 0); */
 }
 .fade-exit{
   opacity: 1;
+  /* transform: translate3d(0, 0, 0); */
 }
 .fade-enter-active{
   opacity: 1;
+  /* transform: translate3d(-50%, 0, 0); */
+
 }
 .fade-exit-active{
+  /* transform: translate3d(50%, 0, 0); */
+
   opacity: 0;
 }
 .fade-enter-active,
